--- a/Styles/Gallery.css
+++ b/Styles/Gallery.css
@@ -3,8 +3,8 @@
 .colgallery {
   padding: 0;
   margin-top: 20px;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   list-style-type: none;
 }
@@ -18,4 +18,6 @@
 
 .colgallery img {
   width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
